# template

./: .editorconfig  .env  .env.development  .gitattributes  .gitignore  .tool-versions  Taskfile.yml  docker-compose.base.yml  docker-compose.dev.yml  docker-compose.development.yml  docker-compose.extra.yml  template.code-workspace
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  init.sh  post-create.sh  post_create.sh
apps/cli/: .tool-versions  README.md  pyproject.toml
apps/cli/cli/: cli.py
apps/cli/scripts/: install-devtools.sh
apps/ui/vite-project/: .env  README.md  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.app.json  vite.config.ts
apps/ui/vite-project/src/: App.tsx  main.tsx  store.ts
scripts/: cli.ts  install-devtools.sh  install_deps.sh  logger.ts
services/api/: .env.example  .tool-versions  Dockerfile  README.md  poetry.toml  pyproject.toml
services/api/app/: database.py  main.py  models.py
services/api/app/api/: routes.py
services/api/app/core/: config.py
services/caddy/: Caddyfile
services/caddy/snippets/: cache_off.Caddyfile  security_headers.Caddyfile  strip_sensitive_headers.Caddyfile
services/db/initdb/: 00_init.sql
